# RTR_Demo

./: CMakeLists.txt  README.md
Core/: Bloom_Blur.h  Bloom_DownSample.h  CMakeLists.txt  CSM.h  ClusteredForwardPlus.h  ConvolutionSM.h  DOF_Metod1.h  ESM.h  Hatch.h  IBL_Diffuse.h  IBL_Specular.h  ImprovedESM.h  LTC.h  Lines.h  LoadTexture.h  Mesh.h  Model.h  MotionBlur.h  NPRTest.h  OutlineRendering_ImageBased.h  OutlineRendering_NormalEdge.h  OutlineRendering_ProceGeoSil_FattenTriangle.h  OutlineRendering_ProceGeoSil_Zbias_Shell.h  PBR.h  PBR_Diffuse.h  PBR_G.h  PBR_NDF.h  PBR_TEX.h  PCF.h  PCSS.h  ProjectionShadow.h  RenderFixed.h  RenderLoop.h  RenderedObject.h  SH_Irradiance.h  SSAO.h  SSAOHB.h  SSAO_depth_only.h  SSR.h  ShadowMap.h  (+11 more)
Core/AO/: ssao.frag  ssao_depth_only.frag  ssao_lighting.frag  ssaohb.frag  ssaohb_geometry.frag
Core/Bloom_DownSample/: bloom_final.frag  downSample.frag
Core/CSM/: secondShader.frag  secondShader.vert
Core/ClusteredForwardPlus/: clusteredForward.frag  clusteredForward.vert
Core/ConvolutionSM/: ShadowMapShader.vert  secondShader.frag
Core/DOF_Method1/: final.frag  original.frag  original.vert
Core/ESM/: ShadowMapShader.frag  secondShader.frag
Core/Hatch/: hatch.frag  hatch.vert
Core/ImprovedESM/: ShadowMapShader.frag  secondShader.frag
Core/LTC/: g_ltc_mag.txt  g_ltc_mat.txt  lightShader.frag  lightShader.vert  ltc.frag  test.frag
Core/Lines/: noTexShader.frag  noTexShader.geom  noTexShader.vert
Core/ModelDemo/: ModelDemo.h
Core/MotionBlur/: finalShader.frag  neigMax.frag  originalShader.frag  originalShader.vert  (+1 more)
(+99 files in other folders)
